# wanpc

./: .gitlab-ci.yml  README.md  pyproject.toml
docs/: Makefile  index.md  make.bat
docs/source/: conf.py  index.md  modules.rst  wanpc.rst
docs/source/_static/: basic.css
docs/source/_static/css/: custom.css
docs/source/advanced/: configuration.md
docs/source/api/: index.md
docs/source/user_guide/: getting_started.md  installation.md  quickstart.md
docs/tutorial/: getting_started.md
tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_logger.py  test_wanpc.py
wanpc/: __init__.py  cli.py  config.py  exceptions.py  logger.py
