[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "wanpc"
version = "0.1.0"
description = "Tempalte manager for common python tasks"
authors = [
    { name = "Jean Philippe Wan", email = "jeanphilippe.wan@statcan.gc.ca" },
]
keywords = [
    "template",
    "workflow",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9, <4.0"
dependencies = [
    "typer>=0.9.0",
    "cookiecutter>=2.5.0",
    "rich>=13.7.0",
    "toml>=0.10.2",
    "tomli>=2.0.1",
    "tomli_w>=1.0.0",
    "validate_pyproject[all]>=0.23",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.284",
    "mypy>=1.5.0",
]

[project.scripts]
wanpc = "wanpc.cli:main"
run-docs = "wanpc.cli:run_docs_main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-ra -q --cov=your_package --cov-report=term-missing"

[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "I",
]
ignore = [
    "E203",
    "E501",
]
line-length = 120
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]
exclude = [
    "venv/",
    "build/",
    "dist/",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
ignore_missing_imports = true

[tool.coverage.report]

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.1.2"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-notfound-page = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-rtd-theme = ">=1.3.0"
nbsphinx = ">=0.9.3"
sphinx-togglebutton = ">=0.3.2"
myst-parser = ">=2.0.0"
sphinxcontrib-mermaid = ">=0.9.2"
sphinx-design = ">=0.5.0"
sphinx-pydantic = ">=0.1.1"
myst-nb = ">=0.13.1"
